--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URL=mongodb+srv://kaushalbharambe26:Pass_1234@cluster0.onkqn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://govindgore26:Pass_1234@cluster0.onkqn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
